2001-05-24  Adam Fedor  <fedor@gnu.org>

	* Source/NSApplication.m (initialize_gnustep_backend): Check if
	bundle loading actually worked.

	* Source/NSBundleAdditions.m ([NSApplication
	-_deactivateVisibleWindow:]): New method.
	([GSNibContainer -awakeWithContext:]): Use it when app is not active.
	
2000-05-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFont.m
	Cache all the fonts so we can returend a cached on if the same
	font is required twice, this makes some of the caching in xdps
	obsolte. 
	
2000-05-19  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSBezierPath.h
	* Source/NSBezierPath.m
	Added ivars and implementation for dashes.
	* Source/GSTextStorage.h
	* Source/GSTextStorage.m
	Extracted the interface definition into a separate file.
	* Source/NSStringDrawing.m
	Integrated patches from Frederic <frederic.chauvin@noos.fr> to
	seed up drawing.
	
2000-05-13  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSPasteboard.h
	* Source/externs.m
	Added some missing pasteboard types.
	* Headers/gnustep/gui/NSView.h
	* Source/NSView.m
	Added missing methods from MacOS X specification.
	* Source/NSStringDrawing.m
	Corrected bug in setupChunk() that showed formats for the wrong
	range of characters.
	
2001-05-13  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* configure.in: added /usr/local/include and /usr/local/lib for
	FreeBSD. Use ADDITIONAL_LIB_DIRS instead of ADDITIONAL_LD_FLAGS.
	* config.make.in (ADDITIONAL_LIB_DIRS): renamed.
	* config.guess: new file.
	* config.sub: new file.
	* install-sh: new file.
	
	* Source/NSSavePanel.m ([NSSavePanel -setDelegate:]): check for -panel:
	userEnteredFilename:confirmed:
	([NSSavePanel -ok:]): call delegate method -panel:userEnteredFilename:
	confirmed: (MacOS X). Run an alert panel if the filename already exists
	([NSSavePanel -browser:selectCellWithString:inColumn:]): removed
	keyboard handling.

	* Headers/gnustep/gui/NSSavePanel.h: added ivar.
