@@ -1,3 +1,8 @@
+2001-05-25  Adam Fedor  <fedor@gnu.org>
+
+	* Source/NSApplication.m (initialize_gnustep_backend): Use runtime
+	(NSBundle) to find backend if not BACKEND_BUNDLE.
+
 2001-05-24  Adam Fedor  <fedor@gnu.org>
 
 	* Source/NSApplication.m (initialize_gnustep_backend): Check if
